# periodeec

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile  README.md  app.py  beets.py  config.example.yaml  config.yaml  deemix.json  deemix_dl.py  docker-compose.example.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  tidal-dl.json  tidal_dl.py
.github/workflows/: build_image.yaml
config/: README.md
periodeec/: beets.py  beets_handler.py  config.py  download_manager.py  main.py  parser.py  playlist.py  plex.py  plex_handler.py  schema.py  spotify_handler.py  track.py  user.py
periodeec/importers/: __init__.py  base_importer.py  importer_manager.py  lastfm_importer.py  listenbrainz_importer.py  spotify_importer.py
periodeec/modules/: deemix.py  downloader.py  freyr.py  qobuz.py  slskd.py  tidal.py
