[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "periodeec"
version = "0.1.0"
description = "Automated music synchronization system that bridges Spotify playlists with local Plex libraries"
authors = [{name = "Anatosun", email = "z4jyol8l@duck.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
keywords = ["spotify", "plex", "music", "synchronization", "automation"]

dependencies = [
    "requests",
    "spotipy",
    "spotipy-anon",
    "async-timeout",
    "beets>=2.4.0,<3.0.0",
    "deemix",
    "colorama",
    "schedule>=1.1.0",
    "plexapi>=4.7.0",
    "aiohttp>=3.8.0",
    "PyYAML>=6.0",
    "jsonschema>=4.0.0",
    "pathvalidate>=2.5.0",
    "pylast>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/anatosun/periodeec"
Repository = "https://github.com/anatosun/periodeec"
Issues = "https://github.com/anatosun/periodeec/issues"

[project.scripts]
periodeec = "periodeec.main:main"

[tool.setuptools.packages.find]
include = ["periodeec*"]

[tool.setuptools.package-data]
periodeec = ["**/*.yaml", "**/*.yml", "**/*.json"]